@@ -1,3 +1,7 @@
+2014-03-27 Jens Thoms Toerring    <jt@toerring.de>
+
+	* Some minor fixes for object label alignment
+
 2014-03-25 Jens Thoms Toerring    <jt@toerring.de>
 
 	* */Makefile.am: Removed '-Wl,--no-undefined' since
